--- a/python/src/nepali_chatbot/requirements.txt
+++ b/python/src/nepali_chatbot/requirements.txt
@@ -1,4 +1,6 @@
-torch==2.0.1
-transformers==4.31.0
-boto3==1.28.0
-sentencepiece==0.1.99
+langchain-core
+langchain-anthropic
+langchain-community
+anthropic
+boto3
+requests
